PLAT-83172: Fix Heading spacing between text and divider (#2449)
* PLAT-83172: Space added for Heading with line, cleanup of divider cruft

Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

* Variabilize padding

Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

* Removed the remaining Divider cruft variables; sorted the guide again

Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

Integrated-By: Ryan Duffy (ryan.duffy@lge.com)

--- a/packages/moonstone/styles/variables.less
+++ b/packages/moonstone/styles/variables.less
@@ -27,7 +27,6 @@
 @moon-expandable-value-font-size-large:   30px;
 @moon-expandable-client-item-font-size:   27px;
 @moon-expandable-client-item-font-size-large:   33px;
-@moon-divider-font-size:            24px; // Deprecated?
 @moon-heading-large-font-size:      36px;
 @moon-heading-medium-font-size:     33px;
 @moon-heading-small-font-size:      27px;
@@ -55,7 +54,6 @@
 @moon-non-latin-header-title-below-font-size: 33px;
 @moon-non-latin-body-font-size:         27px;
 @moon-non-latin-body-small-font-size:   24px;
-@moon-non-latin-divider-font-size:      27px;
 @moon-non-latin-button-large-font-size: 36px;
 @moon-non-latin-button-small-font-size: 27px;
 @moon-non-latin-expandable-client-item-font-size: 27px;
@@ -111,13 +109,6 @@
 @moon-body-line-height: @moon-body-font-size + 6;
 @moon-body-line-height-large: @moon-body-line-height + 6; // The fact that this 6 is the same number as the above 6 is coincidental. LargeText is typically 6px larger than normal.
 @moon-non-latin-body-line-height: 1.7em;
-
-@moon-divider-font-family: @moon-font-family;
-@moon-divider-font-weight: bold;
-@moon-divider-font-style: italic;
-@moon-divider-letter-spacing: 0;
-@moon-divider-line-height: @moon-header-line-height;
-@moon-divider-non-latin-line-height: @moon-non-latin-header-standard-title-line-height;
 
 @moon-heading-large-font-family: @moon-font-family;
 @moon-heading-large-font-weight: 600;
@@ -196,11 +187,6 @@
 @moon-button-small-colordot-height: 6px;
 @moon-button-to-button-large-h-margin: 30px;
 
-// Divider
-// ---------------------------------------
-@moon-divider-border-width: 3px;
-@moon-divider-height: 39px;
-
 // Dropdown
 // ---------------------------------------
 @moon-dropdown-border-radius: @moon-button-border-radius;
@@ -223,6 +209,8 @@
 @moon-heading-spacing-large: 39px;
 @moon-heading-spacing-medium: 21px;
 @moon-heading-spacing-small: 9px;
+@moon-heading-padding: 0;
+@moon-heading-showline-padding: 0 0 9px 0;
 
 // Icon Button
 // ---------------------------------------
