--- a/packages/moonstone/styles/colors-light.less
+++ b/packages/moonstone/styles/colors-light.less
@@ -95,11 +95,6 @@
 @moon-day-selector-checkbox-bg-color: @moon-formcheckbox-bg-color;
 @moon-day-selector-checkbox-text-color: @moon-formcheckbox-text-color;
 
-// Divider
-// ---------------------------------------
-@moon-divider-text-color: @moon-heading-text-color;  // Deprecated
-@moon-divider-border-color: @moon-heading-border-color;  // Deprecated
-
 // Dropdown
 // ---------------------------------------
 @moon-dropdown-selected-text-color: @moon-spotlight-color;
